--- a/index.html
+++ b/index.html
@@ -3,38 +3,63 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ressáurea</title>
+    <title>RESSAUREA</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Rajdhani:wght@300;500;600;700&display=swap');
       
       html {
         overflow-y: scroll; /* Forces scrollbar track to exist, preventing horizontal jumps */
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
 
       body {
         font-family: 'Rajdhani', sans-serif;
         background-color: #020617; /* Deep Slate */
         color: #e2e8f0;
+        text-rendering: optimizeLegibility;
       }
       
       .font-orbitron {
         font-family: 'Orbitron', sans-serif;
       }
 
-      /* Custom scrollbar */
+      /* Custom scrollbar globally */
       ::-webkit-scrollbar {
-        width: 6px;
+        width: 14px; 
+        height: 20px; /* Massively increased height for horizontal scroll as requested */
       }
       ::-webkit-scrollbar-track {
         background: #0f172a; 
       }
       ::-webkit-scrollbar-thumb {
         background: #334155; 
-        border-radius: 4px;
+        border-radius: 10px;
+        border: 4px solid #0f172a; /* Adds spacing around the thumb */
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #475569; 
+      }
+
+      /* Specific style for category list to ensure visibility and clickability */
+      .category-scroll::-webkit-scrollbar {
+        height: 20px; /* Very easy to click */
+      }
+      .category-scroll::-webkit-scrollbar-track {
+        background: rgba(15, 23, 42, 0.5);
+        margin: 0 20px; /* Indent track */
+        border-radius: 10px;
+      }
+      .category-scroll::-webkit-scrollbar-thumb {
+        background: #475569;
+        border-radius: 10px;
+        cursor: pointer;
+        border: 4px solid transparent; /* Creates padding effect inside the track */
+        background-clip: content-box;
+      }
+      .category-scroll::-webkit-scrollbar-thumb:hover {
+        background-color: #94a3b8;
       }
 
       /* Glow effects */
@@ -73,6 +98,23 @@
       @keyframes fadeIn {
         from { opacity: 0; transform: scale(0.95); }
         to { opacity: 1; transform: scale(1); }
+      }
+
+      /* Animation Utility Classes used in App.tsx */
+      .animate-fade-in-up {
+        animation: fadeInUp 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
+
+      @keyframes fadeInUp {
+        from { opacity: 0; transform: translateY(20px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+
+      /* GPU Acceleration Helper */
+      .gpu-accelerated {
+        transform: translateZ(0);
+        will-change: transform, opacity;
+        backface-visibility: hidden;
       }
     </style>
   <script type="importmap">
