feat: Configure Vite for environment variables
Integrates Vite's environment variable loading mechanism. This ensures that the `API_KEY` is correctly passed to the application at build time, allowing the Gemini service to initialize and function properly.

Also includes minor UI adjustments to the scrollbar for improved user experience.

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
       /* Custom scrollbar globally */
       ::-webkit-scrollbar {
-        width: 14px; 
-        height: 20px; /* Massively increased height for horizontal scroll as requested */
+        width: 20px; /* Increased height/width for better usability */
+        height: 20px; 
       }
       ::-webkit-scrollbar-track {
         background: #0f172a; 
@@ -133,5 +133,6 @@
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
