--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&family=Rajdhani:wght@300;500;600;700&display=swap');
       
       html {
-        overflow-y: scroll; /* Forces scrollbar track to exist, preventing horizontal jumps */
+        overflow-y: auto; /* Changed from scroll to auto to hide scrollbar when not needed */
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
       }
@@ -103,6 +103,10 @@
       /* Animation Utility Classes used in App.tsx */
       .animate-fade-in-up {
         animation: fadeInUp 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
+      }
+      
+      .animate-fade-in-slow {
+        animation: fadeIn 1.5s ease-out forwards;
       }
 
       @keyframes fadeInUp {
